--- a/app/src/main/res/layouts/navbar/layout/chat_screen.xml
+++ b/app/src/main/res/layouts/navbar/layout/chat_screen.xml
@@ -2,62 +2,47 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white_color"
-    xmlns:tools="http://schemas.android.com/tools"
     tools:context=".navbar.Chat">
 
-    <com.google.android.material.appbar.MaterialToolbar
-        android:id="@+id/toolbar_chat"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/toolbar_bottom_border"
+        android:layout_height="match_parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:subtitleTextAppearance="@font/golos_text_semi_bold"
-        app:titleCentered="true"
-        app:title="Chat"
-        app:titleTextColor="@color/font_primary_color"
-        app:layout_constraintTop_toTopOf="parent"/>
-
-    <com.google.android.material.textfield.TextInputLayout
-        app:layout_constraintTop_toBottomOf="@+id/toolbar_chat"
-        android:layout_marginTop="65dp"
-        android:padding="20dp"
-        app:boxBackgroundMode="none"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:hintEnabled="false"
-        android:hint="@string/app_name"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-
         app:layout_constraintTop_toTopOf="parent">
+        <com.google.android.material.appbar.MaterialToolbar
+            android:layout_width="match_parent"
+            android:layout_marginBottom="20dp"
+            android:layout_height="70dp"
+            android:id="@+id/appbar_chat"
+            android:background="@drawable/toolbar_bottom_border"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+            <com.google.android.material.textview.MaterialTextView
+                android:layout_width="wrap_content"
+                android:text="Chat"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:textAppearance="@style/text_bold_font_primary"
+                android:textSize="16sp"
+                android:layout_height="wrap_content"/>
 
-        <com.google.android.material.textfield.TextInputEditText
+        </com.google.android.material.appbar.MaterialToolbar>
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycle_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="20dp"
-            android:drawableEnd="@drawable/icon_search"
-            android:textColor="@color/primary_color"
-            android:gravity="center|start"
-            android:background="@drawable/rounded_border"
-            android:textColorHint="@color/primary_color"
-
-            android:hint="hint" />
-    </com.google.android.material.textfield.TextInputLayout>
+            android:layout_below="@+id/appbar_chat"/>
 
 
-    <com.google.android.material.card.MaterialCardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        tools:ignore="MissingConstraints">
-
-    </com.google.android.material.card.MaterialCardView>
+    </RelativeLayout>
 
 
-    
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
