--- a/app/src/main/res/layouts/navbar/layout/chat_screen.xml
+++ b/app/src/main/res/layouts/navbar/layout/chat_screen.xml
@@ -65,13 +65,12 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recycle_view"
+            android:id="@+id/chat_recycle_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/search_lecture" />
 
 
     </RelativeLayout>
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
