--- a/app/src/main/res/layouts/navbar/layout/history_screen.xml
+++ b/app/src/main/res/layouts/navbar/layout/history_screen.xml
@@ -1,19 +1,77 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/primary_color"
+    android:background="@color/white_color"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".navbar.RiwayatJudul">
-    
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Riwayat Judul"
-        android:textColor="@color/white_color"
-        android:textSize="30dp"
-        android:textStyle="bold"
-        android:layout_gravity="center"/>
 
-</FrameLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <com.google.android.material.appbar.MaterialToolbar
+            android:id="@+id/appbar_chat"
+            android:layout_width="match_parent"
+            android:layout_height="62dp"
+            android:layout_marginBottom="20dp"
+            android:background="@drawable/toolbar_bottom_border"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <com.google.android.material.textview.MaterialTextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:text="Riwayat Judul"
+                android:textAppearance="@style/text_bold_font_primary"
+                android:textSize="16sp" />
+
+        </com.google.android.material.appbar.MaterialToolbar>
+
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/search_lecture"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/appbar_chat"
+            android:layout_marginLeft="12dp"
+            android:layout_marginRight="12dp"
+            android:background="@drawable/rounded_border"
+            app:boxBackgroundMode="none"
+            android:layout_marginBottom="20dp"
+            app:endIconMode="custom"
+            app:endIconDrawable="@drawable/icon_search"
+            app:endIconTint="@color/primary_color"
+            app:hintEnabled="false">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/editText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/golos_text_regular"
+                android:hint="Cari judul ..."
+                android:textColor="@color/font_primary_color"
+                android:paddingLeft="20dp"
+                android:padding="15dp"
+                android:textColorHint="@color/font_secondary_variant" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/history_recycle_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/search_lecture" />
+
+    </RelativeLayout>
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
