--- a/app/src/main/res/layouts/navbar/layout/chat_screen.xml
+++ b/app/src/main/res/layouts/navbar/layout/chat_screen.xml
@@ -9,10 +9,11 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
+
 
         <com.google.android.material.appbar.MaterialToolbar
             android:id="@+id/appbar_chat"
@@ -35,40 +36,55 @@
 
         </com.google.android.material.appbar.MaterialToolbar>
 
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/search_lecture"
+        <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/appbar_chat"
-            android:layout_marginLeft="12dp"
-            android:layout_marginRight="12dp"
-            android:background="@drawable/rounded_border"
-            app:boxBackgroundMode="none"
-            android:layout_marginBottom="20dp"
-            app:endIconMode="custom"
-            app:endIconDrawable="@drawable/icon_search"
-            app:endIconTint="@color/primary_color"
-            app:hintEnabled="false">
+            android:layout_below="@id/appbar_chat">
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/search_dosen"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/golos_text_regular"
-                android:hint="Cari dosen ..."
-                android:textColor="@color/font_primary_color"
-                android:paddingLeft="20dp"
-                android:padding="15dp"
-                android:textColorHint="@color/font_secondary_variant" />
+                android:orientation="vertical">
 
-        </com.google.android.material.textfield.TextInputLayout>
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/search_lecture"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/appbar_chat"
+                    android:layout_marginLeft="12dp"
+                    android:layout_marginRight="12dp"
+                    android:layout_marginBottom="20dp"
+                    android:background="@drawable/rounded_border"
+                    app:boxBackgroundMode="none"
+                    app:endIconDrawable="@drawable/icon_search"
+                    app:endIconMode="custom"
+                    app:endIconTint="@color/primary_color"
+                    app:hintEnabled="false">
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/chat_recycle_view"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/search_lecture" />
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/search_dosen"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/golos_text_regular"
+                        android:hint="Cari dosen ..."
+                        android:maxLines="1"
+                        android:padding="15dp"
+                        android:paddingLeft="20dp"
+                        android:textColor="@color/font_primary_color"
+                        android:textColorHint="@color/font_secondary_variant" />
+
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/chat_recycle_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/search_lecture"
+                    android:nestedScrollingEnabled="false" />
+            </LinearLayout>
+
+
+        </androidx.core.widget.NestedScrollView>
 
 
     </RelativeLayout>
