--- a/app/src/main/res/layouts/navbar/layout/history_screen.xml
+++ b/app/src/main/res/layouts/navbar/layout/history_screen.xml
@@ -58,6 +58,7 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/golos_text_regular"
                 android:hint="Cari judul ..."
+                android:maxLines="1"
                 android:textColor="@color/font_primary_color"
                 android:paddingLeft="20dp"
                 android:padding="15dp"
