--- a/app/src/main/res/layouts/navbar/layout/home_screen.xml
+++ b/app/src/main/res/layouts/navbar/layout/home_screen.xml
@@ -192,6 +192,7 @@
                             android:orientation="vertical">
 
                             <com.google.android.material.card.MaterialCardView
+                                android:id="@+id/btn_input_judul_ta"
                                 android:layout_width="70dp"
                                 android:layout_height="70dp"
                                 app:cardBackgroundColor="@color/white_color"
@@ -231,6 +232,7 @@
                             android:orientation="vertical">
 
                             <com.google.android.material.card.MaterialCardView
+                                android:id="@+id/btn_monitoring"
                                 android:layout_width="70dp"
                                 android:layout_height="70dp"
                                 app:cardBackgroundColor="@color/white_color"
@@ -270,7 +272,7 @@
                             android:orientation="vertical">
 
                             <com.google.android.material.card.MaterialCardView
-
+                                android:id="@+id/btn_form_pengajuan"
                                 android:layout_width="70dp"
                                 android:layout_height="70dp"
                                 app:cardBackgroundColor="@color/white_color"
@@ -310,6 +312,7 @@
                             android:orientation="vertical">
 
                             <com.google.android.material.card.MaterialCardView
+                                android:id="@+id/btn_update_status"
                                 android:layout_width="70dp"
                                 android:layout_height="70dp"
                                 app:cardBackgroundColor="@color/white_color"
