--- a/app/src/main/res/layouts/navbar/home_menu/layout/update_status_screen.xml
+++ b/app/src/main/res/layouts/navbar/home_menu/layout/update_status_screen.xml
@@ -15,7 +15,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <com.google.android.material.appbar.MaterialToolbar
-            android:id="@+id/appbar_status_screen"
+            android:id="@+id/appbar_update_status"
             android:layout_width="match_parent"
             android:layout_height="62dp"
             android:layout_marginBottom="20dp"
@@ -34,5 +34,39 @@
                 android:textSize="16sp" />
 
         </com.google.android.material.appbar.MaterialToolbar>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="12dp"
+            android:layout_marginRight="12dp"
+            android:layout_below="@+id/appbar_update_status"
+            android:orientation="vertical">
+            <com.google.android.material.button.MaterialButtonToggleGroup
+                android:id="@+id/dropdown_toggle_group"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:singleSelection="true">
+
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/button_option_1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Option 1" />
+
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/button_option_2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Option 2" />
+
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/button_option_3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Option 3" />
+
+            </com.google.android.material.button.MaterialButtonToggleGroup>
+        </LinearLayout>
     </RelativeLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
