feat(login) : integration login

--- a/app/src/main/res/layouts/auth/layout/login_screen.xml
+++ b/app/src/main/res/layouts/auth/layout/login_screen.xml
@@ -82,6 +82,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="45sp"
                 android:backgroundTint="@color/white_color"
+                android:id="@+id/passwordController"
                 android:hint="xxxxxxx" />
         </RelativeLayout>
 
@@ -101,6 +102,7 @@
         <androidx.appcompat.widget.AppCompatButton
             android:layout_width="match_parent"
             android:layout_height="54sp"
+            android:id="@+id/btnLogin"
             android:layout_alignParentBottom="true"
             android:layout_marginBottom="24sp"
             android:textColor="@color/white_color"
